<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/movie_title"
            android:layout_width="0dp"
            android:layout_marginStart="8dp"
            android:paddingTop="8dp"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Dune" />

        <TextView
            android:id="@+id/movie_runtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="2h 32m"
            android:textStyle="bold"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@id/movie_title"
            app:layout_constraintTop_toBottomOf="@id/movie_title"/>

        <ImageView
            android:id="@+id/movie_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@id/movie_runtime"
            tools:src="@drawable/eeijxm3553xvufbkpfkdg6clcbq" />

        <ImageView
            android:id="@+id/movie_overview_image"
            android:layout_width="100dp"
            android:layout_height="130dp"
            android:scaleType="centerCrop"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movie_image"
            tools:src="@drawable/dune" />

        <TextView
            android:id="@+id/movie_overview_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="16dp"
            android:textStyle="bold"
            android:ellipsize="end"
            android:maxLines="5"
            app:layout_constraintBottom_toBottomOf="@id/movie_overview_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/movie_overview_image"
            app:layout_constraintTop_toTopOf="@id/movie_overview_image"
            tools:text="Paul Atreides, a brilliant and gifted young man born into a great destiny beyond his understanding, must travel to the most dangerous planet in the universe to ensure the future of his family and his people. As malevolent forces explode into conflict over the planet's exclusive supply of the most precious resource in existence-a commodity capable of unlocking humanity's greatest potential-only those who can conquer their fear will survivce" />

        <ImageView
            android:id="@+id/movie_rating_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_star_24"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@id/movie_overview_image"
            app:layout_constraintTop_toTopOf="@+id/movie_overview_image" />

        <TextView
            android:id="@+id/movie_rating_average"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            tools:text="7.3 / 10"
            android:gravity="center"
            android:layout_marginStart="4dp"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/movie_rating_star"
            app:layout_constraintTop_toTopOf="@id/movie_rating_star"
            app:layout_constraintBottom_toBottomOf="@id/movie_rating_star" />

        <TextView
            android:id="@+id/tvCast"
            android:text="Cast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/movie_add_to_watchlist"
            app:layout_constraintStart_toStartOf="@id/movie_overview_image"
            android:textSize="32sp" />

        <LinearLayout
            android:id="@+id/movie_add_to_watchlist"
            style="@style/Widget.MaterialComponents.CardView"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/watchlist_button"
            android:elevation="12dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="@id/movie_overview_text"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@id/movie_overview_image"
            app:layout_constraintTop_toBottomOf="@id/movie_overview_image">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:src="@drawable/ic_add" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Add to watchlist"
                android:textColor="@color/black"
                android:textSize="18sp" />


        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCastMembers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@id/tvCast"
            app:layout_constraintTop_toBottomOf="@id/tvCast"
            android:paddingBottom="12dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvGenres"
            app:layout_constraintStart_toEndOf="@id/movie_rating_average"
            app:layout_constraintTop_toTopOf="@id/movie_rating_average"
            app:layout_constraintBottom_toBottomOf="@id/movie_rating_average"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            android:layout_width="0dp"
            android:layout_height="0dp" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="100dp" />

        <TextView
            android:id="@+id/tvReviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/rvCastMembers"
            app:layout_constraintStart_toStartOf="@id/tvCast"
            android:text="@string/reviews"
            android:textColor="@color/black"
            android:layout_marginTop="8dp"
            android:textSize="32sp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvReviews"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxHeight="400dp"
            android:layout_marginEnd="20dp"
            android:paddingBottom="8dp"
            app:layout_constraintStart_toStartOf="@id/rvCastMembers"
            app:layout_constraintEnd_toEndOf="@id/rvCastMembers"
            app:layout_constraintTop_toBottomOf="@id/tvReviews"
        />

        <TextView
            android:id="@+id/tvNoReviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_reviews_exist"
            android:textSize="16sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@id/tvReviews"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toTopOf="@id/tvReviews"
            app:layout_constraintBottom_toBottomOf="@id/tvReviews"
            />

        <LinearLayout
            android:id="@+id/separator"
            android:layout_width="0dp"
            android:layout_height="1dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rvReviews"
            android:layout_marginTop="4dp"
            android:background="@color/light_grey"
            android:orientation="horizontal" />

        <TextView
            android:id="@+id/tvReviewRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/rvReviews"
            app:layout_constraintTop_toBottomOf="@id/separator"
            android:layout_marginTop="10dp"
            android:text="@string/rating"
            android:textColor="@color/black"
            />

        <EditText
            android:id="@+id/etReviewRating"
            android:layout_width="48dp"
            android:layout_height="0dp"
            android:layout_marginStart="4dp"
            android:inputType="numberDecimal"
            android:background="@drawable/edit_text_background"
            app:layout_constraintStart_toEndOf="@id/tvReviewRating"
            app:layout_constraintTop_toTopOf="@id/tvReviewRating"
            app:layout_constraintBottom_toBottomOf="@id/tvReviewRating"
            android:gravity="center"
            />

        <EditText
            android:id="@+id/etReview"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@id/tvReviewRating"
            app:layout_constraintStart_toStartOf="@id/rvReviews"
            android:background="@drawable/edit_text_background"
            android:hint="@string/write_a_review_for_this_movie"
            android:padding="8dp"
            android:inputType="textCapSentences|textMultiLine"
            android:gravity="top"
            app:layout_constraintEnd_toEndOf="@id/rvReviews"/>

        <LinearLayout
            android:id="@+id/btnAddReview"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/Widget.MaterialComponents.CardView"
            app:layout_constraintStart_toStartOf="@id/rvReviews"
            app:layout_constraintTop_toBottomOf="@id/etReview"
            app:layout_constraintEnd_toEndOf="@id/rvReviews"
            android:layout_width="0dp"
            android:background="@drawable/watchlist_button"
            android:gravity="center"
            android:elevation="12dp"
            android:layout_height="36dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_review"
                android:textColor="@color/black"
                android:textSize="18sp"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
</layout>